--- a/JeppeGPT_fromscratch.ipynb
+++ b/JeppeGPT_fromscratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMBRAgNHiK2cvvD4gMj6Cpg",
+      "authorship_tag": "ABX9TyPrWgL7izekDWJr79Q6XJMY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3vVzyBOSVEaC",
-        "outputId": "1fe4286f-6a9c-47a0-991c-5015a761e2e0"
+        "outputId": "dfea1383-b4bb-46e5-ce89-067362fbc495"
       },
       "outputs": [
         {
@@ -44,12 +44,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'GPTdevdev'...\n",
-            "remote: Enumerating objects: 649, done.\u001b[K\n",
-            "remote: Counting objects: 100% (649/649), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (272/272), done.\u001b[K\n",
-            "remote: Total 649 (delta 374), reused 649 (delta 374), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (649/649), 935.29 KiB | 3.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (374/374), done.\n"
+            "remote: Enumerating objects: 677, done.\u001b[K\n",
+            "remote: Counting objects: 100% (677/677), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (299/299), done.\u001b[K\n",
+            "remote: Total 677 (delta 390), reused 646 (delta 374), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (677/677), 7.32 MiB | 4.65 MiB/s, done.\n",
+            "Resolving deltas: 100% (390/390), done.\n"
           ]
         }
       ],
@@ -60,68 +60,16 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install tiktoken transformers"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DBgj8XRRZG13",
-        "outputId": "77d83927-8061-4e1b-b444-c5d78fcf89d3"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting tiktoken\n",
-            "  Downloading tiktoken-0.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting transformers\n",
-            "  Downloading transformers-4.33.1-py3-none-any.whl (7.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.6/7.6 MB\u001b[0m \u001b[31m23.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2023.6.3)\n",
-            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2.31.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.12.2)\n",
-            "Collecting huggingface-hub<1.0,>=0.15.1 (from transformers)\n",
-            "  Downloading huggingface_hub-0.17.1-py3-none-any.whl (294 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m294.8/294.8 kB\u001b[0m \u001b[31m30.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.23.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (23.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.1)\n",
-            "Collecting tokenizers!=0.11.3,<0.14,>=0.11.1 (from transformers)\n",
-            "  Downloading tokenizers-0.13.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (7.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m43.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting safetensors>=0.3.1 (from transformers)\n",
-            "  Downloading safetensors-0.3.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m22.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.1)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.6.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.5.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.2.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2023.7.22)\n",
-            "Installing collected packages: tokenizers, safetensors, tiktoken, huggingface-hub, transformers\n",
-            "Successfully installed huggingface-hub-0.17.1 safetensors-0.3.3 tiktoken-0.5.1 tokenizers-0.13.3 transformers-4.33.1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cd ./nanoGPT/data/shakespeare_char/ && python prepare.py"
+        "!cd ./GPTdevdev/data/TinyStories2Jeppe/ && python prepare.py"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_n3BUT-cbGGc",
-        "outputId": "e566a5ea-6da7-41de-f48b-261e28fbdff3"
+        "outputId": "108dc861-50e1-4b81-d6b1-9781994e37d7"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
