--- a/JeppeMakeDataset.ipynb
+++ b/JeppeMakeDataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9aL+t6yxfXBA+Rj/fLQGz",
+      "authorship_tag": "ABX9TyNZ5UK78EC3ERR0iJ1yjaGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install openai"
+        "!pip install openai\n",
+        "try:\n",
+        "  !mkdir Jeppe_temp_folder\n",
+        "except:\n",
+        "  print(\"Folder already exists\")\n",
+        "print(\"done\")"
       ],
       "metadata": {
         "id": "izQ20p6qKHJu"
@@ -39,21 +44,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 38,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
         "id": "sZwHLJ4BG9HS",
-        "outputId": "d07941bb-da40-4a28-ca28-95afa0c3e16f"
+        "outputId": "7942e412-7963-4a22-bf60-fe383abb94f7"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I will make myself disappear and reappear instantly.\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'I will make myself disappear and reappear elsewhere instantly'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
         }
       ],
       "source": [
@@ -75,22 +87,28 @@
         "  messages=[{\"role\": \"user\", \"content\": prompt}]\n",
         "\n",
         "  )\n",
-        "  return print(completion.choices[0].message.content)\n",
         "\n",
-        "make_openai_request(\"In 10 tokens, compelete the following: And for my next magic trick, \")"
+        "  return completion.choices[0].message.content\n",
+        "\n",
+        "prompt = \"In 10 tokens, complete the following: And for my next magic trick, \"\n",
+        "make_openai_request(prompt)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def append_to_dataset(response_text, dataset_file):\n",
-        "    with open(dataset_file, \"a\") as file:\n",
-        "        file.write(response_text + \"\\n\")"
+        "def append_to_dataset(response_text, output_dataset_file):\n",
+        "    with open(output_dataset_file, \"a\") as file:\n",
+        "        file.write(response_text + \"\\n\")\n",
+        "\n",
+        "prompt = \"In 10 tokens, complete the following: And for my next magic trick, \"\n",
+        "\n",
+        "append_to_dataset(make_openai_request(prompt), \"/content/Jeppe_temp_folder/myfile.txt\")\n"
       ],
       "metadata": {
         "id": "g3QCljQuHuDz"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     }
   ]
