--- a/JeppeMakeDataset.ipynb
+++ b/JeppeMakeDataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZ5UK78EC3ERR0iJ1yjaGS",
+      "authorship_tag": "ABX9TyPFyMBEhzOTNBIhSguSs9Xm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,33 +44,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "sZwHLJ4BG9HS",
-        "outputId": "7942e412-7963-4a22-bf60-fe383abb94f7"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'I will make myself disappear and reappear elsewhere instantly'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
+      "source": [
+        "pip install wonderwords\n",
+        "pip install --upgrade wonderwords"
       ],
+      "metadata": {
+        "id": "NntFymYe6usU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import wonderwords\n",
+        "#\n",
+        "#\n",
+        "#https://pypi.org/project/wonderwords/\n",
+        "#https://wonderwords.readthedocs.io\n",
+        "a random noun or adjective, by default all parts of speech are included\n",
+        "r.word(include_parts_of_speech=[\"nouns\", \"adjectives\"])\n",
+        "\n",
+        "# generate a random word between the length of 3 and 8 characters\n",
+        "r.word(word_min_length=3, word_max_length=8)"
+      ],
+      "metadata": {
+        "id": "X_eKu8kI62fT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import openai\n",
-        "from flask import Flask, request, jsonify\n",
         "\n",
         "openai.organization = \"org-WIgpZh4xRqpQ3g9sxXRvHRQz\"\n",
         "openai.api_key = \"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\"\n",
@@ -90,25 +97,42 @@
         "\n",
         "  return completion.choices[0].message.content\n",
         "\n",
-        "prompt = \"In 10 tokens, complete the following: And for my next magic trick, \"\n",
-        "make_openai_request(prompt)"
-      ]
+        "def generate_unique_filename(path=\"\"):\n",
+        "    \"\"\"Generate a unique filename using a timestamp.\"\"\"\n",
+        "    timestamp = int(time.time())\n",
+        "    filename = f\"dataset_{timestamp}.txt\"\n",
+        "    return path + filename\n",
+        "\n",
+        "custom_path = \"/content/Jeppe_temp_folder/\"\n",
+        "num_requests = 3                            #this will be alot larger soon\n",
+        "dataset_file = generate_unique_filename()  # Create a unique dataset file\n",
+        "\n",
+        "print(f\"Generating dataset in file: {dataset_file}\")\n",
+        "\n",
+        "with open(dataset_file, \"a\") as f:\n",
+        "        for _ in range(num_requests):\n",
+        "            word_to_insert = random.choice([\"chair\", \"lawn\", \"table\"])  # Replace with your list of words\n",
+        "            prompt = f\"The cat sat on the {word_to_insert}.\" #formatted string literal (f-string) in Python. It allows you to embed expressions inside string literals, using curly braces {} to enclose expressions\n",
+        "            print(f\"Using prompt: {prompt}\")\n",
+        "            response = make_openai_request(prompt)\n",
+        "            print(f\"Received response: {response}\")\n",
+        "            f.write(response + \"\\n\")  # Append each response as a new line\n",
+        "\n",
+        "print(\"Dataset generation complete.\")"
+      ],
+      "metadata": {
+        "id": "cQBQBiVn6RXf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "def append_to_dataset(response_text, output_dataset_file):\n",
-        "    with open(output_dataset_file, \"a\") as file:\n",
-        "        file.write(response_text + \"\\n\")\n",
-        "\n",
-        "prompt = \"In 10 tokens, complete the following: And for my next magic trick, \"\n",
-        "\n",
-        "append_to_dataset(make_openai_request(prompt), \"/content/Jeppe_temp_folder/myfile.txt\")\n"
-      ],
+      "source": [],
       "metadata": {
-        "id": "g3QCljQuHuDz"
+        "id": "5tvj0gb8hXXS"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     }
   ]
